update majority class to most common class

--- a/Code/Modelling/Logistic Regression/Figure and Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/Logistic Regression/Figure and Table Creation/Create Tables.ipynb
@@ -441,7 +441,7 @@
       "0                                     Altman's Z   0.1923   \n",
       "0                 Financial Variables and Sector   0.6225   \n",
       "0  Financial Variables, Sector, and NLP Features   0.6333   \n",
-      "0                              Majority Baseline   0.3247   \n",
+      "0                     Most Common Class Baseline   0.3247   \n",
       "\n",
       "  Weighted Average Precision Weighted Average Recall F1 Score  \\\n",
       "0                     0.3231                  0.1923   0.2266   \n",
@@ -462,7 +462,7 @@
       "0                                     Altman's Z   0.7442   \n",
       "0                 Financial Variables and Sector   0.9508   \n",
       "0  Financial Variables, Sector, and NLP Features   0.9508   \n",
-      "0                              Majority Baseline   0.3247   \n",
+      "0                     Most Common Class Baseline   0.3247   \n",
       "\n",
       "  Weighted Average Precision Weighted Average Recall F1 Score  \\\n",
       "0                     0.8377                  0.7442   0.7723   \n",
@@ -524,9 +524,9 @@
     "\n",
     "    # Check majority baselines are the same\n",
     "    print('Majority baselines are the same:', all([majority_baseline == majority_baselines[0] for majority_baseline in majority_baselines]))\n",
-    "    # Add row with Model/Baseline = 'Majority Baseline' and Accuracy = majority_baseline[0]\n",
+    "    # Add row with Model/Baseline = 'Most Common Class Baseline' and Accuracy = majority_baseline[0]\n",
     "    model_comparison_df = pd.concat([model_comparison_df, pd.DataFrame({\n",
-    "        'Model/Baseline': ['Majority Baseline'],\n",
+    "        'Model/Baseline': ['Most Common Class Baseline'],\n",
     "        'Accuracy': [majority_baselines[0]],\n",
     "        'Weighted Average Precision': [''],\n",
     "        'Weighted Average Recall': [''],\n",
@@ -1029,7 +1029,7 @@
       "0                                     Altman's Z   0.9535   \n",
       "0                 Financial Variables and Sector   0.0286   \n",
       "0  Financial Variables, Sector, and NLP Features   0.5984   \n",
-      "0                              Majority Baseline   0.9535   \n",
+      "0                     Most Common Class Baseline   0.9535   \n",
       "\n",
       "  Weighted Average Precision Weighted Average Recall F1 Score  \n",
       "0                     0.9091                  0.9535   0.9308  \n",
@@ -1044,7 +1044,7 @@
       "0                                     Altman's Z   0.5742   \n",
       "0                 Financial Variables and Sector   0.7004   \n",
       "0  Financial Variables, Sector, and NLP Features   0.7165   \n",
-      "0                              Majority Baseline   0.9535   \n",
+      "0                     Most Common Class Baseline   0.9535   \n",
       "\n",
       "  Weighted Average Precision Weighted Average Recall F1 Score  \n",
       "0                     0.9115                  0.5742   0.6961  \n",
@@ -1072,9 +1072,9 @@
     "\n",
     "    # Check majority baselines are the same\n",
     "    print('Majority baselines are the same:', all([majority_baseline == majority_baselines[0] for majority_baseline in majority_baselines]))\n",
-    "    # Add row with Model/Baseline = 'Majority Baseline' and Accuracy = majority_baseline[0]\n",
+    "    # Add row with Model/Baseline = 'Most Common Class Baseline' and Accuracy = majority_baseline[0]\n",
     "    model_comparison_df = pd.concat([model_comparison_df, pd.DataFrame({\n",
-    "        'Model/Baseline': ['Majority Baseline'],\n",
+    "        'Model/Baseline': ['Most Common Class Baseline'],\n",
     "        'Accuracy': [majority_baselines[0]],\n",
     "        'Weighted Average Precision': [''],\n",
     "        'Weighted Average Recall': [''],\n",
