--- a/Code/Modelling/XGBoost/Figure and Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/XGBoost/Figure and Table Creation/Create Tables.ipynb
@@ -439,7 +439,7 @@
       "0                                     Altman's Z   0.3855   \n",
       "0                 Financial Variables and Sector   0.7630   \n",
       "0  Financial Variables, Sector, and NLP Features   0.9034   \n",
-      "0                              Majority Baseline   0.3247   \n",
+      "0                     Most Common Class Baseline   0.3247   \n",
       "\n",
       "  Weighted Average Precision Weighted Average Recall F1 Score  \\\n",
       "0                     0.3468                  0.3855   0.3408   \n",
@@ -460,7 +460,7 @@
       "0                                     Altman's Z   0.9517   \n",
       "0                 Financial Variables and Sector   0.9535   \n",
       "0  Financial Variables, Sector, and NLP Features   0.9535   \n",
-      "0                              Majority Baseline   0.3247   \n",
+      "0                     Most Common Class Baseline   0.3247   \n",
       "\n",
       "  Weighted Average Precision Weighted Average Recall F1 Score  \\\n",
       "0                     0.9504                  0.9517   0.9509   \n",
@@ -522,9 +522,9 @@
     "\n",
     "    # Check majority baselines are the same\n",
     "    print('Majority baselines are the same:', all([majority_baseline == majority_baselines[0] for majority_baseline in majority_baselines]))\n",
-    "    # Add row with Model/Baseline = 'Majority Baseline' and Accuracy = majority_baseline[0]\n",
+    "    # Add row with Model/Baseline = 'Most Common Class Baseline' and Accuracy = majority_baseline[0]\n",
     "    model_comparison_df = pd.concat([model_comparison_df, pd.DataFrame({\n",
-    "        'Model/Baseline': ['Majority Baseline'],\n",
+    "        'Model/Baseline': ['Most Common Class Baseline'],\n",
     "        'Accuracy': [majority_baselines[0]],\n",
     "        'Weighted Average Precision': [''],\n",
     "        'Weighted Average Recall': [''],\n",
@@ -1022,7 +1022,7 @@
       "0                                     Altman's Z   0.9186   \n",
       "0                 Financial Variables and Sector   0.9517   \n",
       "0  Financial Variables, Sector, and NLP Features   0.9535   \n",
-      "0                              Majority Baseline   0.9535   \n",
+      "0                     Most Common Class Baseline   0.9535   \n",
       "\n",
       "  Weighted Average Precision Weighted Average Recall F1 Score  \n",
       "0                     0.9111                  0.9186   0.9148  \n",
@@ -1037,7 +1037,7 @@
       "0                                     Altman's Z   0.8488   \n",
       "0                 Financial Variables and Sector   0.9454   \n",
       "0  Financial Variables, Sector, and NLP Features   0.9490   \n",
-      "0                              Majority Baseline   0.9535   \n",
+      "0                     Most Common Class Baseline   0.9535   \n",
       "\n",
       "  Weighted Average Precision Weighted Average Recall F1 Score  \n",
       "0                     0.9117                  0.8488   0.8787  \n",
@@ -1064,9 +1064,9 @@
     "\n",
     "    # Check majority baselines are the same\n",
     "    print('Majority baselines are the same:', all([majority_baseline == majority_baselines[0] for majority_baseline in majority_baselines]))\n",
-    "    # Add row with Model/Baseline = 'Majority Baseline' and Accuracy = majority_baseline[0]\n",
+    "    # Add row with Model/Baseline = 'Most Common Class Baseline' and Accuracy = majority_baseline[0]\n",
     "    model_comparison_df = pd.concat([model_comparison_df, pd.DataFrame({\n",
-    "        'Model/Baseline': ['Majority Baseline'],\n",
+    "        'Model/Baseline': ['Most Common Class Baseline'],\n",
     "        'Accuracy': [majority_baselines[0]],\n",
     "        'Weighted Average Precision': [''],\n",
     "        'Weighted Average Recall': [''],\n",
