--- a/Output/Modelling/Logistic Regression/Tables/change_model_comparison_df_smaller.tex
+++ b/Output/Modelling/Logistic Regression/Tables/change_model_comparison_df_smaller.tex
@@ -6,7 +6,7 @@ Model/Baseline & Accuracy \\
 Altman's Z & 0.9535 \\
 Financial Variables and Sector & 0.0286 \\
 Financial Variables, Sector, and NLP Features & 0.5984 \\
-Majority Baseline & 0.9535 \\
+Most Common Class Baseline & 0.9535 \\
 \bottomrule
 \end{tabular}
 
