--- a/Output/Modelling/Logistic Regression/Tables/exclude_previous_model_comparison_df.tex
+++ b/Output/Modelling/Logistic Regression/Tables/exclude_previous_model_comparison_df.tex
@@ -6,7 +6,7 @@ Model/Baseline & Accuracy & Weighted Average Precision & Weighted Average Recall
 Altman's Z & 0.1923 & 0.3231 & 0.1923 & 0.2266 & 0.4633 \\
 Financial Variables and Sector & 0.6225 & 0.6295 & 0.6225 & 0.6223 & 0.9186 \\
 Financial Variables, Sector, and NLP Features & 0.6333 & 0.6389 & 0.6333 & 0.6329 & 0.9267 \\
-Majority Baseline & 0.3247 &  &  &  &  \\
+Most Common Class Baseline & 0.3247 &  &  &  &  \\
 \bottomrule
 \end{tabular}
 
