--- a/Output/Modelling/Logistic Regression/Tables/exclude_previous_model_comparison_df_smaller.tex
+++ b/Output/Modelling/Logistic Regression/Tables/exclude_previous_model_comparison_df_smaller.tex
@@ -6,7 +6,7 @@ Model/Baseline & Accuracy \\
 Altman's Z & 0.1923 \\
 Financial Variables and Sector & 0.6225 \\
 Financial Variables, Sector, and NLP Features & 0.6333 \\
-Majority Baseline & 0.3247 \\
+Most Common Class Baseline & 0.3247 \\
 \bottomrule
 \end{tabular}
 
