--- a/Output/Modelling/Logistic Regression/Tables/include_previous_model_comparison_df.tex
+++ b/Output/Modelling/Logistic Regression/Tables/include_previous_model_comparison_df.tex
@@ -6,7 +6,7 @@ Model/Baseline & Accuracy & Weighted Average Precision & Weighted Average Recall
 Altman's Z & 0.7442 & 0.8377 & 0.7442 & 0.7723 & 0.7746 \\
 Financial Variables and Sector & 0.9508 & 0.9518 & 0.9508 & 0.9510 & 0.9946 \\
 Financial Variables, Sector, and NLP Features & 0.9508 & 0.9518 & 0.9508 & 0.9510 & 0.9946 \\
-Majority Baseline & 0.3247 &  &  &  &  \\
+Most Common Class Baseline & 0.3247 &  &  &  &  \\
 \bottomrule
 \end{tabular}
 
