--- a/Output/Modelling/XGBoost/Tables/include_previous_model_comparison_df.tex
+++ b/Output/Modelling/XGBoost/Tables/include_previous_model_comparison_df.tex
@@ -6,7 +6,7 @@ Model/Baseline & Accuracy & Weighted Average Precision & Weighted Average Recall
 Altman's Z & 0.9517 & 0.9504 & 0.9517 & 0.9509 & 0.9946 \\
 Financial Variables and Sector & 0.9535 & 0.9539 & 0.9535 & 0.9536 & 0.9964 \\
 Financial Variables, Sector, and NLP Features & 0.9535 & 0.9539 & 0.9535 & 0.9536 & 0.9964 \\
-Majority Baseline & 0.3247 &  &  &  &  \\
+Most Common Class Baseline & 0.3247 &  &  &  &  \\
 \bottomrule
 \end{tabular}
 
