--- a/Output/Modelling/Logistic Regression/Tables/change_model_comparison_df.tex
+++ b/Output/Modelling/Logistic Regression/Tables/change_model_comparison_df.tex
@@ -6,7 +6,7 @@ Model/Baseline & Accuracy & Weighted Average Precision & Weighted Average Recall
 Altman's Z & 0.9535 & 0.9091 & 0.9535 & 0.9308 \\
 Financial Variables and Sector & 0.0286 & 0.0008 & 0.0286 & 0.0016 \\
 Financial Variables, Sector, and NLP Features & 0.5984 & 0.9063 & 0.5984 & 0.7189 \\
-Majority Baseline & 0.9535 &  &  &  \\
+Most Common Class Baseline & 0.9535 &  &  &  \\
 \bottomrule
 \end{tabular}
 
