--- a/Output/Modelling/Logistic Regression/Tables/change_smote_model_comparison_df.tex
+++ b/Output/Modelling/Logistic Regression/Tables/change_smote_model_comparison_df.tex
@@ -6,7 +6,7 @@ Model/Baseline & Accuracy & Weighted Average Precision & Weighted Average Recall
 Altman's Z & 0.5742 & 0.9115 & 0.5742 & 0.6961 \\
 Financial Variables and Sector & 0.7004 & 0.9075 & 0.7004 & 0.7895 \\
 Financial Variables, Sector, and NLP Features & 0.7165 & 0.9154 & 0.7165 & 0.8017 \\
-Majority Baseline & 0.9535 &  &  &  \\
+Most Common Class Baseline & 0.9535 &  &  &  \\
 \bottomrule
 \end{tabular}
 
