--- a/Output/Modelling/Logistic Regression/Tables/include_previous_model_comparison_df_smaller.tex
+++ b/Output/Modelling/Logistic Regression/Tables/include_previous_model_comparison_df_smaller.tex
@@ -6,7 +6,7 @@ Model/Baseline & Accuracy \\
 Altman's Z & 0.7442 \\
 Financial Variables and Sector & 0.9508 \\
 Financial Variables, Sector, and NLP Features & 0.9508 \\
-Majority Baseline & 0.3247 \\
+Most Common Class Baseline & 0.3247 \\
 \bottomrule
 \end{tabular}
 
