--- a/Output/Modelling/XGBoost/Tables/change_model_comparison_df.tex
+++ b/Output/Modelling/XGBoost/Tables/change_model_comparison_df.tex
@@ -6,7 +6,7 @@ Model/Baseline & Accuracy & Weighted Average Precision & Weighted Average Recall
 Altman's Z & 0.9186 & 0.9111 & 0.9186 & 0.9148 \\
 Financial Variables and Sector & 0.9517 & 0.9091 & 0.9517 & 0.9299 \\
 Financial Variables, Sector, and NLP Features & 0.9535 & 0.9091 & 0.9535 & 0.9308 \\
-Majority Baseline & 0.9535 &  &  &  \\
+Most Common Class Baseline & 0.9535 &  &  &  \\
 \bottomrule
 \end{tabular}
 
