--- a/Output/Modelling/XGBoost/Tables/change_smote_model_comparison_df.tex
+++ b/Output/Modelling/XGBoost/Tables/change_smote_model_comparison_df.tex
@@ -6,7 +6,7 @@ Model/Baseline & Accuracy & Weighted Average Precision & Weighted Average Recall
 Altman's Z & 0.8488 & 0.9117 & 0.8488 & 0.8787 \\
 Financial Variables and Sector & 0.9454 & 0.9112 & 0.9454 & 0.9280 \\
 Financial Variables, Sector, and NLP Features & 0.9490 & 0.9089 & 0.9490 & 0.9285 \\
-Majority Baseline & 0.9535 &  &  &  \\
+Most Common Class Baseline & 0.9535 &  &  &  \\
 \bottomrule
 \end{tabular}
 
