--- a/Output/Modelling/XGBoost/Tables/change_smote_model_comparison_df_smaller.tex
+++ b/Output/Modelling/XGBoost/Tables/change_smote_model_comparison_df_smaller.tex
@@ -6,7 +6,7 @@ Model/Baseline & Accuracy \\
 Altman's Z & 0.8488 \\
 Financial Variables and Sector & 0.9454 \\
 Financial Variables, Sector, and NLP Features & 0.9490 \\
-Majority Baseline & 0.9535 \\
+Most Common Class Baseline & 0.9535 \\
 \bottomrule
 \end{tabular}
 
