--- a/Output/Modelling/XGBoost/Tables/exclude_previous_model_comparison_df.tex
+++ b/Output/Modelling/XGBoost/Tables/exclude_previous_model_comparison_df.tex
@@ -6,7 +6,7 @@ Model/Baseline & Accuracy & Weighted Average Precision & Weighted Average Recall
 Altman's Z & 0.3855 & 0.3468 & 0.3855 & 0.3408 & 0.7657 \\
 Financial Variables and Sector & 0.7630 & 0.7679 & 0.7630 & 0.7575 & 0.9597 \\
 Financial Variables, Sector, and NLP Features & 0.9034 & 0.9040 & 0.9034 & 0.9017 & 0.9857 \\
-Majority Baseline & 0.3247 &  &  &  &  \\
+Most Common Class Baseline & 0.3247 &  &  &  &  \\
 \bottomrule
 \end{tabular}
 
