add middle versions of model comparison tables

--- a/Code/Modelling/XGBoost/Figure and Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/XGBoost/Figure and Table Creation/Create Tables.ipynb
@@ -553,6 +553,14 @@
     "    with open('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'model_comparison_df.tex', 'w') as f:\n",
     "        f.write(latex_with_font_size)\n",
     "\n",
+    "    # Middle version latex - keep only columns 'Model/Baseline', 'Accuracy', 'Share $\\\\le$ 1 Rating From Actual'\n",
+    "    model_comparison_df_middle = model_comparison_df[['Model/Baseline', 'Accuracy', 'Share $\\\\le$ 1 Rating From Actual']]\n",
+    "    # Center all columns\n",
+    "    lt_string = model_comparison_df_middle.to_latex(index=False, column_format='c' * len(model_comparison_df_middle.columns), escape=False)\n",
+    "    latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "    with open('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'model_comparison_df_middle.tex', 'w') as f:\n",
+    "        f.write(latex_with_font_size)\n",
+    "\n",
     "    # Smaller version latex - keep only columns 'Model/Baseline', 'Accuracy'\n",
     "    model_comparison_df_smaller = model_comparison_df[['Model/Baseline', 'Accuracy']]\n",
     "    # Center all columns\n",
