company mentions distribution

--- a/Output/All Data EDA/NLP EDA - NER on Company Names/Company Mentions Average.tex
+++ b/Output/All Data EDA/NLP EDA - NER on Company Names/Company Mentions Average.tex
@@ -5,3 +5,21 @@
 \renewcommand{\avgCompanyMentions}{98.66}
 \renewcommand{\avgCompanyMentions}{98.63}
 \renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentions}{98.63}
+\newcommand{\avgCompanyMentNoSelf}{0.0}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentNoSelf}{1.37}
+\renewcommand{\avgCompanyMentNoSelf}{1.37}
+\renewcommand{\avgCompanyMentNoSelf}{1.37}
+\renewcommand{\avgCompanyMentNoSelf}{1.37}
+\renewcommand{\avgCompanyMentNoSelf}{1.37}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentNoSelf}{1.37}
