--- a/Code/Exploratory Data Analysis/All Data/All Data - NLP EDA - NER on Company Names.ipynb
+++ b/Code/Exploratory Data Analysis/All Data/All Data - NLP EDA - NER on Company Names.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "[5509 rows x 3 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "[5509 rows x 3 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -385,17 +385,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "check ticker always not matched_ticker\n",
-      "False\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -560,7 +552,7 @@
        "[3335 rows x 6 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,15 +563,15 @@
     "# Load in '../../../Data/Company_Mentions/Company_Mentions_With_Ticker.xlsx'\n",
     "cm_with_ticker = pd.read_excel('../../../Data/Company_Mentions/Company_Mentions_With_Ticker.xlsx')\n",
     "\n",
-    "print('check ticker always not matched_ticker')\n",
-    "print(len(cm_with_ticker[cm_with_ticker['ticker'] == cm_with_ticker['matched_ticker']]) == len(cm_with_ticker))\n",
+    "# Drop if ticker == matched_ticker\n",
+    "cm_with_ticker = cm_with_ticker[cm_with_ticker['ticker'] != cm_with_ticker['matched_ticker']]\n",
     "\n",
     "cm_with_ticker"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -606,6 +598,7 @@
        "      <th>ticker</th>\n",
        "      <th>fixed_quarter_date</th>\n",
        "      <th>company_mentions</th>\n",
+       "      <th>distinct_companies_mentioned</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -614,33 +607,39 @@
        "      <td>AAPL</td>\n",
        "      <td>2014-10-01</td>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>AAPL</td>\n",
        "      <td>2016-01-01</td>\n",
        "      <td>7</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>AAPL</td>\n",
        "      <td>2016-04-01</td>\n",
        "      <td>5</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>AAPL</td>\n",
        "      <td>2016-10-01</td>\n",
        "      <td>4</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>ABBV</td>\n",
        "      <td>2015-01-01</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -650,54 +649,59 @@
        "      <td>YUM</td>\n",
        "      <td>2015-07-01</td>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1880</th>\n",
        "      <td>ZBRA</td>\n",
        "      <td>2016-01-01</td>\n",
        "      <td>17</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1881</th>\n",
        "      <td>ZBRA</td>\n",
        "      <td>2016-04-01</td>\n",
        "      <td>24</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1882</th>\n",
        "      <td>ZBRA</td>\n",
        "      <td>2016-07-01</td>\n",
        "      <td>5</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1883</th>\n",
        "      <td>ZBRA</td>\n",
        "      <td>2016-10-01</td>\n",
        "      <td>19</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1884 rows × 3 columns</p>\n",
+       "<p>1884 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     ticker fixed_quarter_date  company_mentions\n",
-       "0      AAPL         2014-10-01                 2\n",
-       "1      AAPL         2016-01-01                 7\n",
-       "2      AAPL         2016-04-01                 5\n",
-       "3      AAPL         2016-10-01                 4\n",
-       "4      ABBV         2015-01-01                 1\n",
-       "...     ...                ...               ...\n",
-       "1879    YUM         2015-07-01                 2\n",
-       "1880   ZBRA         2016-01-01                17\n",
-       "1881   ZBRA         2016-04-01                24\n",
-       "1882   ZBRA         2016-07-01                 5\n",
-       "1883   ZBRA         2016-10-01                19\n",
+       "     ticker fixed_quarter_date  company_mentions  distinct_companies_mentioned\n",
+       "0      AAPL         2014-10-01                 2                             1\n",
+       "1      AAPL         2016-01-01                 7                             4\n",
+       "2      AAPL         2016-04-01                 5                             2\n",
+       "3      AAPL         2016-10-01                 4                             1\n",
+       "4      ABBV         2015-01-01                 1                             1\n",
+       "...     ...                ...               ...                           ...\n",
+       "1879    YUM         2015-07-01                 2                             1\n",
+       "1880   ZBRA         2016-01-01                17                             3\n",
+       "1881   ZBRA         2016-04-01                24                             3\n",
+       "1882   ZBRA         2016-07-01                 5                             2\n",
+       "1883   ZBRA         2016-10-01                19                             3\n",
        "\n",
-       "[1884 rows x 3 columns]"
+       "[1884 rows x 4 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,6 +709,11 @@
    "source": [
     "# Sum up by ticker and fixed_quarter_date\n",
     "no_self_mentions_mentions = cm_with_ticker[['ticker', 'fixed_quarter_date', 'count']].groupby(['ticker', 'fixed_quarter_date']).sum().reset_index().rename(columns={'count': 'company_mentions'})\n",
+    "\n",
+    "# also do distinct companies mentioned\n",
+    "distinct_no_self_cos_mentioned = cm_with_ticker[['ticker', 'fixed_quarter_date', 'matched_ticker']].groupby(['ticker', 'fixed_quarter_date']).nunique()['matched_ticker']\n",
+    "# merge with no_self_mentions_mentions\n",
+    "no_self_mentions_mentions = no_self_mentions_mentions.merge(distinct_no_self_cos_mentioned, on = ['ticker', 'fixed_quarter_date']).rename(columns={'matched_ticker': 'distinct_companies_mentioned'})\n",
     "\n",
     "# convert fixed_quarter_date to string\n",
     "no_self_mentions_mentions['fixed_quarter_date'] = no_self_mentions_mentions['fixed_quarter_date'].astype(str)\n",
@@ -714,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -741,6 +750,7 @@
        "      <th>ticker</th>\n",
        "      <th>fixed_quarter_date</th>\n",
        "      <th>company_mentions</th>\n",
+       "      <th>distinct_companies_mentioned</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -749,11 +759,13 @@
        "      <td>AAPL</td>\n",
        "      <td>2014-10-01</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>AAPL</td>\n",
        "      <td>2015-01-01</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -761,11 +773,13 @@
        "      <td>AAPL</td>\n",
        "      <td>2015-04-01</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>AAPL</td>\n",
        "      <td>2015-07-01</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -773,9 +787,11 @@
        "      <td>AAPL</td>\n",
        "      <td>2015-10-01</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -785,11 +801,13 @@
        "      <td>MHO</td>\n",
        "      <td>2013-10-01</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5505</th>\n",
        "      <td>MHO</td>\n",
        "      <td>2014-01-01</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -797,11 +815,13 @@
        "      <td>MHO</td>\n",
        "      <td>2014-04-01</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5507</th>\n",
        "      <td>MHO</td>\n",
        "      <td>2014-07-01</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -809,30 +829,31 @@
        "      <td>WTI</td>\n",
        "      <td>2016-07-01</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5509 rows × 3 columns</p>\n",
+       "<p>5509 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     ticker fixed_quarter_date  company_mentions\n",
-       "0      AAPL         2014-10-01               2.0\n",
-       "1      AAPL         2015-01-01               0.0\n",
-       "2      AAPL         2015-04-01               0.0\n",
-       "3      AAPL         2015-07-01               0.0\n",
-       "4      AAPL         2015-10-01               0.0\n",
-       "...     ...                ...               ...\n",
-       "5504    MHO         2013-10-01               0.0\n",
-       "5505    MHO         2014-01-01               0.0\n",
-       "5506    MHO         2014-04-01               0.0\n",
-       "5507    MHO         2014-07-01               0.0\n",
-       "5508    WTI         2016-07-01               0.0\n",
+       "     ticker fixed_quarter_date  company_mentions  distinct_companies_mentioned\n",
+       "0      AAPL         2014-10-01               2.0                           1.0\n",
+       "1      AAPL         2015-01-01               0.0                           0.0\n",
+       "2      AAPL         2015-04-01               0.0                           0.0\n",
+       "3      AAPL         2015-07-01               0.0                           0.0\n",
+       "4      AAPL         2015-10-01               0.0                           0.0\n",
+       "...     ...                ...               ...                           ...\n",
+       "5504    MHO         2013-10-01               0.0                           0.0\n",
+       "5505    MHO         2014-01-01               0.0                           0.0\n",
+       "5506    MHO         2014-04-01               0.0                           0.0\n",
+       "5507    MHO         2014-07-01               0.0                           0.0\n",
+       "5508    WTI         2016-07-01               0.0                           0.0\n",
        "\n",
-       "[5509 rows x 3 columns]"
+       "[5509 rows x 4 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,13 +870,14 @@
     "\n",
     "# Fill NaN with 0\n",
     "all_tickers_fqd['company_mentions'] = all_tickers_fqd['company_mentions'].fillna(0)\n",
+    "all_tickers_fqd['distinct_companies_mentioned'] = all_tickers_fqd['distinct_companies_mentioned'].fillna(0)\n",
     "\n",
     "all_tickers_fqd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -877,13 +899,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average number of company mentions: 1.3744781267017607\n"
-     ]
     }
    ],
    "source": [
@@ -913,11 +928,45 @@
     "# Output version with no title\n",
     "plt.savefig(output_folder + 'Company Mentions Distribution No Self Mentions No Title Log Scale.png')\n",
     "plt.title('Company Mentions Distribution')\n",
-    "plt.show()\n",
-    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average number of company mentions: 1.3744781267017607\n",
+      "number of calls with non-self mentions: 1,884\n",
+      "share of calls with non-self mentions: 34.2\\%\n",
+      "average number of distinct non-self companies mentioned: 0.49918315483753856\n"
+     ]
+    }
+   ],
+   "source": [
     "print('Average number of company mentions:', all_tickers_fqd['company_mentions'].mean())\n",
     "\n",
-    "stattotex(round(all_tickers_fqd['company_mentions'].mean(), 2), 'avgCompanyMentNoSelf', output_folder + 'Company Mentions Average.tex')"
+    "stattotex(round(all_tickers_fqd['company_mentions'].mean(), 2), 'avgCompanyMentNoSelf', output_folder + 'Company Mentions Average.tex')\n",
+    "\n",
+    "# Count of calls with other company mentions\n",
+    "calls_with_mentions = all_tickers_fqd[all_tickers_fqd['company_mentions'] > 0].shape[0]\n",
+    "#calls_with_mentions = \"{:,}\"\n",
+    "# add comma\n",
+    "cwm_str = \"{:,}\".format(calls_with_mentions)\n",
+    "stattotex(cwm_str, 'noCallsWithNonSelfMentions', output_folder + 'Calls with Non Self Mentions.tex')\n",
+    "print('number of calls with non-self mentions:', cwm_str)\n",
+    "# Share of calls with other company mentions\n",
+    "share_calls_with_mentions = str(round(calls_with_mentions / all_tickers_fqd.shape[0] * 100, 2)) + '\\%'\n",
+    "stattotex(share_calls_with_mentions, 'shareCallsWithNonSelfMentions', output_folder + 'Calls with Non Self Mentions.tex')\n",
+    "print('share of calls with non-self mentions:', share_calls_with_mentions)\n",
+    "\n",
+    "# average number of distinct companies mentioned\n",
+    "print('average number of distinct non-self companies mentioned:', all_tickers_fqd['distinct_companies_mentioned'].mean())\n",
+    "stattotex(round(all_tickers_fqd['distinct_companies_mentioned'].mean(), 2), 'avgDistinctNonSelfCompaniesMentioned', output_folder + 'Company Mentions Average.tex')"
    ]
   }
  ],
