--- a/Output/All Data EDA/NLP EDA - NER on Company Names/Company Mentions Average.tex
+++ b/Output/All Data EDA/NLP EDA - NER on Company Names/Company Mentions Average.tex
@@ -23,3 +23,33 @@
 \renewcommand{\avgCompanyMentNoSelf}{1.37}
 \renewcommand{\avgCompanyMentions}{98.63}
 \renewcommand{\avgCompanyMentNoSelf}{1.37}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentNoSelf}{1.37}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentNoSelf}{1.37}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentNoSelf}{1.37}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentNoSelf}{1.37}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentNoSelf}{1.37}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentNoSelf}{1.37}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentNoSelf}{1.37}
+\newcommand{\avgDistinctCompaniesMentioned}{0.5}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentNoSelf}{1.37}
+\newcommand{\avgDistinctNonSelfCompaniesMentioned}{0.5}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentNoSelf}{1.37}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentNoSelf}{1.37}
+\renewcommand{\avgDistinctNonSelfCompaniesMentioned}{0.5}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentNoSelf}{1.37}
+\renewcommand{\avgDistinctNonSelfCompaniesMentioned}{0.5}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentNoSelf}{1.37}
+\renewcommand{\avgDistinctNonSelfCompaniesMentioned}{0.5}
