distinct  non-self excluding zero mention

--- a/Code/Exploratory Data Analysis/All Data/All Data - NLP EDA - NER on Company Names.ipynb
+++ b/Code/Exploratory Data Analysis/All Data/All Data - NLP EDA - NER on Company Names.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "[5509 rows x 3 columns]"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "[5509 rows x 3 columns]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        "[3335 rows x 6 columns]"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
        "[1884 rows x 4 columns]"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
        "[5509 rows x 4 columns]"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +943,8 @@
       "Average number of company mentions: 1.3744781267017607\n",
       "number of calls with non-self mentions: 1,884\n",
       "share of calls with non-self mentions: 34.2\\%\n",
-      "average number of distinct non-self companies mentioned: 0.49918315483753856\n"
+      "average number of distinct non-self companies mentioned: 0.49918315483753856\n",
+      "average number of distinct non-self companies mentioned, excluding zero mentions: 1.459660297239915\n"
      ]
     }
    ],
@@ -966,7 +967,11 @@
     "\n",
     "# average number of distinct companies mentioned\n",
     "print('average number of distinct non-self companies mentioned:', all_tickers_fqd['distinct_companies_mentioned'].mean())\n",
-    "stattotex(round(all_tickers_fqd['distinct_companies_mentioned'].mean(), 2), 'avgDistinctNonSelfCompaniesMentioned', output_folder + 'Company Mentions Average.tex')"
+    "stattotex(round(all_tickers_fqd['distinct_companies_mentioned'].mean(), 2), 'avgDistinctNonSelfCompaniesMentioned', output_folder + 'Company Mentions Average.tex')\n",
+    "\n",
+    "# average number of distinct companies mentioned, excluding zero mentions\n",
+    "print('average number of distinct non-self companies mentioned, excluding zero mentions:', all_tickers_fqd[all_tickers_fqd['distinct_companies_mentioned'] > 0]['distinct_companies_mentioned'].mean())\n",
+    "stattotex(round(all_tickers_fqd[all_tickers_fqd['distinct_companies_mentioned'] > 0]['distinct_companies_mentioned'].mean(), 2), 'avgDistinctNonSelfCompaniesMentionedNoZero', output_folder + 'Company Mentions Average.tex')"
    ]
   }
  ],
