--- a/Output/All Data EDA/NLP EDA - NER on Company Names/Calls with Non Self Mentions.tex
+++ b/Output/All Data EDA/NLP EDA - NER on Company Names/Calls with Non Self Mentions.tex
@@ -19,3 +19,5 @@
 \renewcommand{\shareCallsWithNonSelfMentions}{34.2\%}
 \renewcommand{\noCallsWithNonSelfMentions}{1,884}
 \renewcommand{\shareCallsWithNonSelfMentions}{34.2\%}
+\renewcommand{\noCallsWithNonSelfMentions}{1,884}
+\renewcommand{\shareCallsWithNonSelfMentions}{34.2\%}
