--- a/Output/All Data EDA/NLP EDA - NER on Company Names/Company Mentions Average.tex
+++ b/Output/All Data EDA/NLP EDA - NER on Company Names/Company Mentions Average.tex
@@ -53,3 +53,7 @@
 \renewcommand{\avgCompanyMentions}{98.63}
 \renewcommand{\avgCompanyMentNoSelf}{1.37}
 \renewcommand{\avgDistinctNonSelfCompaniesMentioned}{0.5}
+\renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentNoSelf}{1.37}
+\renewcommand{\avgDistinctNonSelfCompaniesMentioned}{0.5}
+\newcommand{\avgDistinctNonSelfCompaniesMentionedNoZero}{1.46}
