--- a/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
+++ b/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
@@ -63,3 +63,9 @@
 \renewcommand{\numCompanies}{429}
 \renewcommand{\numQuarters}{5,509}
 \renewcommand{\numCompanies}{429}
+\renewcommand{\numQuarters}{5,509}
+\renewcommand{\numCompanies}{429}
+\renewcommand{\numQuarters}{5,509}
+\renewcommand{\numCompanies}{429}
+\renewcommand{\numQuarters}{5,509}
+\renewcommand{\numCompanies}{429}
