--- a/Output/All Data EDA/Tabular EDA/share_of_ratings_same_as_previous_fixed_quarter_date.tex
+++ b/Output/All Data EDA/Tabular EDA/share_of_ratings_same_as_previous_fixed_quarter_date.tex
@@ -18,3 +18,9 @@
 \renewcommand{\shareNotChanges}{94.79\%}
 \renewcommand{\shareNotChanges}{94.79\%}
 \newcommand{\shareNotChangesTest}{95.35\%}
+\renewcommand{\shareNotChanges}{94.79\%}
+\renewcommand{\shareNotChangesTest}{95.35\%}
+\renewcommand{\shareNotChanges}{94.79\%}
+\renewcommand{\shareNotChangesTest}{95.35\%}
+\renewcommand{\shareNotChanges}{94.79\%}
+\renewcommand{\shareNotChangesTest}{95.35\%}
